# AI_training

ai_agent/notes/: _To_Do_and_Fixes.txt  app_notes.txt  current_status.txt  future_features.txt  src_ai_agent_prompts.txt
ai_agent/src_project/: main.py  pyproject.toml  src_codebase_indexer.py
ai_agent/src_project_2/: Agent_Explaination.txt  add_files_to_db.py  app_src.py  check_docs.py  indexer.py  memory.py  pyproject.toml  retriever.py  src_agent.py
ai_agent/src_project_2/chroma_db/d70a8663-08a6-4a7d-ab6b-ad704834cede/: index_metadata.pickle
ai_agent/src_project_2/notes/: RAG_Pipeline_Architecture.txt  _To_Do_and_Fixes.txt  app_notes.txt  memory_across_conversations_v1.txt
ai_agent/src_project_2/reembed_db_py_script/: reembed_with_existing_summaries.py
ai_agent/src_updated/: main.py  pyproject.toml  src_app.py  src_codebase_indexer.py
